--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -15,6 +15,13 @@
         android:text="Ha-hallo!"
         android:id="@+id/textView" />
 
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/textView"
+        android:text="Klikk her"
+        android:id="@+id/testKnapp"/>
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
