--- a/app/src/main/res/layout/activity_img_viewer.xml
+++ b/app/src/main/res/layout/activity_img_viewer.xml
@@ -9,7 +9,7 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
     <ImageView
-        android:id="@+id/fullscreen_content"
+        android:id="@+id/img_viewer_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
