Fixing loading bug and adding settings

--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.krist.geosnap.Inbox">
+    tools:context=".Activities.Inbox">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/textView"
-        android:text="Klikk her"
+        android:text="Get local"
         android:id="@+id/testKnapp"/>
 
     <ListView
@@ -35,7 +35,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/testKnapp"
-        android:text="Last Opp test"
+        android:text="Upload"
         android:id="@+id/uploadTest"
         />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:id="@+id/openSettingsButton"
+        android:layout_alignBottom="@+id/uploadTest"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/uploadTest"
+        android:layout_toEndOf="@+id/uploadTest" />
 </RelativeLayout>
