--- a/app/src/main/res/layout/activity_img_viewer.xml
+++ b/app/src/main/res/layout/activity_img_viewer.xml
@@ -10,6 +10,7 @@
          TextureView, etc. -->
     <ImageView
         android:id="@+id/img_viewer_content"
+        android:rotation="90"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
