--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -47,4 +47,12 @@
         android:id="@+id/Bug_info"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open login page"
+        android:id="@+id/openloginButton"
+        android:layout_below="@+id/confirmUserSettingUpdate"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
