--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -21,7 +21,7 @@
         android:id="@+id/listView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp" />
+        android:layout_below="@+id/testKnapp" />
 
     <android.support.v7.widget.AppCompatButton
         android:layout_width="wrap_content"
