--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -9,11 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Activities.Inbox">
 
-    <android.support.v7.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Update"
-        android:id="@+id/testKnapp"/>
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pulltorefresh_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ListView
         android:layout_width="wrap_content"
@@ -22,24 +22,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/testKnapp" />
-
-    <android.support.v7.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/testKnapp"
-        android:text="Upload"
-        android:id="@+id/uploadTest"
-        />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:id="@+id/openSettingsButton"
-        android:layout_alignBottom="@+id/uploadTest"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/uploadTest"
-        android:layout_toEndOf="@+id/uploadTest" />
+</android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
