--- a/app/src/main/res/layout/activity_img_uploader.xml
+++ b/app/src/main/res/layout/activity_img_uploader.xml
@@ -27,7 +27,7 @@
         android:id="@+id/uploaderShareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Share"
+        android:text="@string/share"
         android:layout_below="@+id/uploaderImageView"
         android:layout_centerHorizontal="true" />
 
